intrusion-prevention/seccomp/pod_test_allow.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: opa-test
  name: seccomp-test
spec:
  containers:
  - name: test-container
    image: nginx:alpine
    securityContext:
     seccompProfile:
      type: RuntimeDefault
