intrusion-prevention/seccomp/pod_test_deny.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: opa-test
  name: seccomp-test
spec:
  containers:
  - name: test-container
    image: nginx:alpine
